Uploaded updated Baseline notebookt

--- a/notebooks/Alex/Baseline_model_alex.ipynb
+++ b/notebooks/Alex/Baseline_model_alex.ipynb
@@ -28,7 +28,8 @@
     "### Questions to answer:\n",
     "* Keep or toss?\n",
     "* Redundant to other column (e.g., multiple year columns)?\n",
-    "* How to standardize?"
+    "* How to standardize?\n",
+    "* Does datatype work?"
    ]
   },
   {
@@ -1881,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "id": "53d545d7",
    "metadata": {
     "scrolled": false
@@ -1893,126 +1894,125 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 2439 entries, 283 to 2382\n",
-      "Data columns (total 115 columns):\n",
-      " #    Column                      Dtype  \n",
-      "---   ------                      -----  \n",
-      " 0    receiving_club              object \n",
-      " 1    player_name                 object \n",
-      " 2    position                    object \n",
-      " 3    giving_club                 object \n",
-      " 4    transfer_movement           object \n",
-      " 5    transfer_period             object \n",
-      " 6    fee_cleaned                 float64\n",
-      " 7    receiving_league            object \n",
-      " 8    year                        int64  \n",
-      " 9    season                      object \n",
-      " 10   sofifa_id                   int64  \n",
-      " 11   long_name                   object \n",
-      " 12   age                         int64  \n",
-      " 13   dob                         object \n",
-      " 14   height_cm                   int64  \n",
-      " 15   weight_kg                   int64  \n",
-      " 16   nationality                 object \n",
-      " 17   club_name                   object \n",
-      " 18   league_name                 object \n",
-      " 19   league_rank                 float64\n",
-      " 20   overall                     int64  \n",
-      " 21   potential                   int64  \n",
-      " 22   value_eur                   int64  \n",
-      " 23   wage_eur                    int64  \n",
-      " 24   player_positions            object \n",
-      " 25   preferred_foot              object \n",
-      " 26   international_reputation    int64  \n",
-      " 27   weak_foot                   int64  \n",
-      " 28   skill_moves                 int64  \n",
-      " 29   work_rate                   object \n",
-      " 30   body_type                   object \n",
-      " 31   real_face                   object \n",
-      " 32   release_clause_eur          float64\n",
-      " 33   player_tags                 object \n",
-      " 34   team_position               object \n",
-      " 35   team_jersey_number          float64\n",
-      " 36   loaned_from                 object \n",
-      " 37   joined                      object \n",
-      " 38   contract_valid_until        float64\n",
-      " 39   nation_position             object \n",
-      " 40   nation_jersey_number        float64\n",
-      " 41   pace                        float64\n",
-      " 42   shooting                    float64\n",
-      " 43   passing                     float64\n",
-      " 44   dribbling                   float64\n",
-      " 45   defending                   float64\n",
-      " 46   physic                      float64\n",
-      " 47   gk_diving                   float64\n",
-      " 48   gk_handling                 float64\n",
-      " 49   gk_kicking                  float64\n",
-      " 50   gk_reflexes                 float64\n",
-      " 51   gk_speed                    float64\n",
-      " 52   gk_positioning              float64\n",
-      " 53   player_traits               object \n",
-      " 54   attacking_crossing          int64  \n",
-      " 55   attacking_finishing         int64  \n",
-      " 56   attacking_heading_accuracy  int64  \n",
-      " 57   attacking_short_passing     int64  \n",
-      " 58   attacking_volleys           int64  \n",
-      " 59   skill_dribbling             int64  \n",
-      " 60   skill_curve                 int64  \n",
-      " 61   skill_fk_accuracy           int64  \n",
-      " 62   skill_long_passing          int64  \n",
-      " 63   skill_ball_control          int64  \n",
-      " 64   movement_acceleration       int64  \n",
-      " 65   movement_sprint_speed       int64  \n",
-      " 66   movement_agility            int64  \n",
-      " 67   movement_reactions          int64  \n",
-      " 68   movement_balance            int64  \n",
-      " 69   power_shot_power            int64  \n",
-      " 70   power_jumping               int64  \n",
-      " 71   power_stamina               int64  \n",
-      " 72   power_strength              int64  \n",
-      " 73   power_long_shots            int64  \n",
-      " 74   mentality_aggression        int64  \n",
-      " 75   mentality_interceptions     int64  \n",
-      " 76   mentality_positioning       int64  \n",
-      " 77   mentality_vision            int64  \n",
-      " 78   mentality_penalties         int64  \n",
-      " 79   mentality_composure         float64\n",
-      " 80   defending_marking           float64\n",
-      " 81   defending_standing_tackle   int64  \n",
-      " 82   defending_sliding_tackle    int64  \n",
-      " 83   goalkeeping_diving          int64  \n",
-      " 84   goalkeeping_handling        int64  \n",
-      " 85   goalkeeping_kicking         int64  \n",
-      " 86   goalkeeping_positioning     int64  \n",
-      " 87   goalkeeping_reflexes        int64  \n",
-      " 88   ls                          object \n",
-      " 89   st                          object \n",
-      " 90   rs                          object \n",
-      " 91   lw                          object \n",
-      " 92   lf                          object \n",
-      " 93   cf                          object \n",
-      " 94   rf                          object \n",
-      " 95   rw                          object \n",
-      " 96   lam                         object \n",
-      " 97   cam                         object \n",
-      " 98   ram                         object \n",
-      " 99   lm                          object \n",
-      " 100  lcm                         object \n",
-      " 101  cm                          object \n",
-      " 102  rcm                         object \n",
-      " 103  rm                          object \n",
-      " 104  lwb                         object \n",
-      " 105  ldm                         object \n",
-      " 106  cdm                         object \n",
-      " 107  rdm                         object \n",
-      " 108  rwb                         object \n",
-      " 109  lb                          object \n",
-      " 110  lcb                         object \n",
-      " 111  cb                          object \n",
-      " 112  rcb                         object \n",
-      " 113  rb                          object \n",
-      " 114  fifa year                   int64  \n",
-      "dtypes: float64(20), int64(45), object(50)\n",
-      "memory usage: 2.2+ MB\n"
+      "Data columns (total 114 columns):\n",
+      " #    Column                      Dtype         \n",
+      "---   ------                      -----         \n",
+      " 0    receiving_club              object        \n",
+      " 1    player_name                 object        \n",
+      " 2    position                    object        \n",
+      " 3    giving_club                 object        \n",
+      " 4    transfer_movement           object        \n",
+      " 5    transfer_period             object        \n",
+      " 6    fee_cleaned                 float64       \n",
+      " 7    receiving_league            object        \n",
+      " 8    year                        int64         \n",
+      " 9    season                      object        \n",
+      " 10   sofifa_id                   int64         \n",
+      " 11   long_name                   object        \n",
+      " 12   age                         int64         \n",
+      " 13   dob                         datetime64[ns]\n",
+      " 14   height_cm                   int64         \n",
+      " 15   weight_kg                   int64         \n",
+      " 16   nationality                 object        \n",
+      " 17   club_name                   object        \n",
+      " 18   league_name                 object        \n",
+      " 19   league_rank                 float64       \n",
+      " 20   overall                     int64         \n",
+      " 21   potential                   int64         \n",
+      " 22   wage_eur                    int64         \n",
+      " 23   player_positions            object        \n",
+      " 24   preferred_foot              object        \n",
+      " 25   international_reputation    int64         \n",
+      " 26   weak_foot                   int64         \n",
+      " 27   skill_moves                 int64         \n",
+      " 28   work_rate                   object        \n",
+      " 29   body_type                   object        \n",
+      " 30   real_face                   object        \n",
+      " 31   release_clause_eur          float64       \n",
+      " 32   player_tags                 object        \n",
+      " 33   team_position               object        \n",
+      " 34   team_jersey_number          float64       \n",
+      " 35   loaned_from                 object        \n",
+      " 36   joined                      datetime64[ns]\n",
+      " 37   contract_valid_until        float64       \n",
+      " 38   nation_position             object        \n",
+      " 39   nation_jersey_number        float64       \n",
+      " 40   pace                        float64       \n",
+      " 41   shooting                    float64       \n",
+      " 42   passing                     float64       \n",
+      " 43   dribbling                   float64       \n",
+      " 44   defending                   float64       \n",
+      " 45   physic                      float64       \n",
+      " 46   gk_diving                   float64       \n",
+      " 47   gk_handling                 float64       \n",
+      " 48   gk_kicking                  float64       \n",
+      " 49   gk_reflexes                 float64       \n",
+      " 50   gk_speed                    float64       \n",
+      " 51   gk_positioning              float64       \n",
+      " 52   player_traits               object        \n",
+      " 53   attacking_crossing          int64         \n",
+      " 54   attacking_finishing         int64         \n",
+      " 55   attacking_heading_accuracy  int64         \n",
+      " 56   attacking_short_passing     int64         \n",
+      " 57   attacking_volleys           int64         \n",
+      " 58   skill_dribbling             int64         \n",
+      " 59   skill_curve                 int64         \n",
+      " 60   skill_fk_accuracy           int64         \n",
+      " 61   skill_long_passing          int64         \n",
+      " 62   skill_ball_control          int64         \n",
+      " 63   movement_acceleration       int64         \n",
+      " 64   movement_sprint_speed       int64         \n",
+      " 65   movement_agility            int64         \n",
+      " 66   movement_reactions          int64         \n",
+      " 67   movement_balance            int64         \n",
+      " 68   power_shot_power            int64         \n",
+      " 69   power_jumping               int64         \n",
+      " 70   power_stamina               int64         \n",
+      " 71   power_strength              int64         \n",
+      " 72   power_long_shots            int64         \n",
+      " 73   mentality_aggression        int64         \n",
+      " 74   mentality_interceptions     int64         \n",
+      " 75   mentality_positioning       int64         \n",
+      " 76   mentality_vision            int64         \n",
+      " 77   mentality_penalties         int64         \n",
+      " 78   mentality_composure         float64       \n",
+      " 79   defending_marking           float64       \n",
+      " 80   defending_standing_tackle   int64         \n",
+      " 81   defending_sliding_tackle    int64         \n",
+      " 82   goalkeeping_diving          int64         \n",
+      " 83   goalkeeping_handling        int64         \n",
+      " 84   goalkeeping_kicking         int64         \n",
+      " 85   goalkeeping_positioning     int64         \n",
+      " 86   goalkeeping_reflexes        int64         \n",
+      " 87   ls                          int64         \n",
+      " 88   st                          int64         \n",
+      " 89   rs                          int64         \n",
+      " 90   lw                          int64         \n",
+      " 91   lf                          int64         \n",
+      " 92   cf                          int64         \n",
+      " 93   rf                          int64         \n",
+      " 94   rw                          int64         \n",
+      " 95   lam                         int64         \n",
+      " 96   cam                         int64         \n",
+      " 97   ram                         int64         \n",
+      " 98   lm                          int64         \n",
+      " 99   lcm                         int64         \n",
+      " 100  cm                          int64         \n",
+      " 101  rcm                         int64         \n",
+      " 102  rm                          int64         \n",
+      " 103  lwb                         int64         \n",
+      " 104  ldm                         int64         \n",
+      " 105  cdm                         int64         \n",
+      " 106  rdm                         int64         \n",
+      " 107  rwb                         int64         \n",
+      " 108  lb                          int64         \n",
+      " 109  lcb                         int64         \n",
+      " 110  cb                          int64         \n",
+      " 111  rcb                         int64         \n",
+      " 112  rb                          int64         \n",
+      " 113  fifa year                   int64         \n",
+      "dtypes: datetime64[ns](2), float64(20), int64(70), object(22)\n",
+      "memory usage: 2.1+ MB\n"
      ]
     }
    ],
